# lightrag-rag-infra

./: .gitattributes  .gitignore  README.md
h100-llm/: README.md  docker-compose.yaml  (+1 more)
pmi-generator/: .env  .env.example  README.md  pyproject.toml
pmi-generator/tests/: __init__.py  pdf_fixture.py  source_fixture.py  test_env.py  test_workbench_card_population.py  test_workbench_conversation_agent.py  test_workbench_conversation_contract.py  test_workbench_decomposition.py  test_workbench_domain.py  test_workbench_end_to_end.py  test_workbench_facade.py  test_workbench_fact_synthesis_contract.py  test_workbench_foundation.py  test_workbench_gap_closure.py  test_workbench_gap_investigation.py  test_workbench_large_decomposition.py  test_workbench_lightrag_retrieval.py  test_workbench_llm_live.py  test_workbench_llm_runtime.py  test_workbench_markdown_export.py  test_workbench_mock_mode.py  test_workbench_pdf_source.py  test_workbench_persistence.py  test_workbench_prompt_policy.py  test_workbench_quality_corpus.py  test_workbench_quality_live.py  test_workbench_quality_metrics.py  test_workbench_quality_report.py  test_workbench_quality_runner.py  test_workbench_range_workspace.py  test_workbench_refinement_decisions.py  test_workbench_selection_review.py  test_workbench_semantic_window_canonicalization.py  test_workbench_semantic_window_contract.py  test_workbench_semantic_window_flow.py  test_workbench_semantic_window_split.py  test_workbench_source_navigation.py  test_workbench_source_preparation.py  test_workbench_source_storage.py  test_workbench_terminal_flow.py  (+5 more)
(+195 files in other folders)
